...
@Composable
fun FlightDetails(flight: Flight, padding: PaddingValues) {
  val cardColor = Color.White
  val defaultPadding = 16.dp
  Column(modifier = Modifier.padding(padding)) {
    LazyColumn(
        modifier = Modifier.padding(8.dp).weight(1f).testTag("FlightDetailLazyColumn"),
        verticalArrangement = Arrangement.spacedBy(defaultPadding)) {
          item { GlobalFlightMetricsDetails(flight = flight, cardColor) }
          item { FlightTeamMembersDetails(flight = flight, padding = defaultPadding, cardColor) }
          when (flight) {
            is ConfirmedFlight -> {
              item {
...
      mapOf(
          "Flight status" to flight.getFlightStatus().text,
          "Day of flight" to DateUtility.localDateToString(flight.date),
          "Time slot" to flight.timeSlot.toString(),
          "Number of Passengers" to "${flight.nPassengers}",
          "Flight type" to flight.flightType.name,
          "Balloon" to (flight.balloon?.name ?: "Unset"),
          "Basket" to (flight.basket?.name ?: "Unset"))

  Card(colors = CardDefaults.cardColors(cardColor)) {
    metrics.forEach { (metric, value) -> DisplaySingleMetric(metric = metric, value = value) }
    DisplayListOfMetrics(
        metric = "Vehicles", values = flight.vehicles.map { vehicle -> vehicle.name })
...
    padding: Dp,
    cardColor: Color,
    flightColor: @Composable () -> Unit = { DisplayFlightColor(flight, padding) }
) {
  Card(colors = CardDefaults.cardColors(cardColor)) {
    Row(verticalAlignment = Alignment.CenterVertically, modifier = Modifier.fillMaxWidth()) {
      HeaderTitle(title = "Team", padding = padding, color = Color.Black)
      flightColor()
    }
    if (flight.team.roles.isNotEmpty()) {

      flight.team.roles.forEach { role ->
        var values = listOf("Unset")
...
 * @param cardColor The color to be used for the card background.
 */
@Composable
fun ConfirmFlightTimes(confirmedFlight: ConfirmedFlight, padding: Dp, cardColor: Color) {
  val times =
      mapOf(
          "Team meet up time" to confirmedFlight.meetupTimeTeam,
          "Team departure time" to confirmedFlight.departureTimeTeam,
          "Passengers meet up time" to confirmedFlight.meetupTimePassenger)

  Card(colors = CardDefaults.cardColors(cardColor)) {
    LargeTitle(title = "Meet up times", padding = padding, color = Color.Black)
    times.forEach { (label, time) ->
      DisplaySingleMetric(metric = label, value = DateUtility.localTimeToString(time))
    }
  }
}

...
 * @param padding The padding value to be applied around the content.
 * @param cardColor The color to be used for the card background.
 */
@Composable
fun ConfirmFlightLocation(confirmedFlight: ConfirmedFlight, padding: Dp, cardColor: Color) {
  Card(colors = CardDefaults.cardColors(cardColor), modifier = Modifier.fillMaxWidth()) {
    LargeTitle(title = "Passengers meet up location", padding = padding, color = Color.Black)
    HyperLinkText(location = confirmedFlight.meetupLocationPassenger, padding = padding)
  }
}

/**
 * Composable function for displaying the location of a finished flight.
...
 * @param padding The padding value to be applied around the content.
 * @param cardColor The color to be used for the card background.
 */
@Composable
fun ConfirmFlightRemarks(confirmedFlight: ConfirmedFlight, padding: Dp, cardColor: Color) {
  Card(colors = CardDefaults.cardColors(cardColor), modifier = Modifier.fillMaxWidth()) {
    LargeTitle(title = "Remarks", padding = padding, color = Color.Black)
    if (confirmedFlight.remarks.isEmpty()) {
      Text(text = "There are no remarks", modifier = Modifier.padding(padding))
    }
    confirmedFlight.remarks.forEach { r -> Text(modifier = Modifier.padding(padding), text = r) }
  }
}
...
