...
 * Composable function representing a back button with an arrow icon and text.
 *
 * @param backClick Callback function to be invoked when the back button is clicked.
 */
@Composable
fun Backbutton(backClick: () -> Unit) {
  IconButton(onClick = backClick, modifier = Modifier.fillMaxWidth(0.2f).testTag("BackButton")) {
    Row(verticalAlignment = Alignment.CenterVertically) {
      Icon(Icons.Filled.ArrowBack, contentDescription = "Back", tint = lightOrange)
      Text(text = "Back", color = lightOrange)
    }
  }
}

